--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "aos": "^3.0.0-beta.6",
     "firebase": "^8.3.3",
     "rc-queue-anim": "^1.8.5",
     "react": "^17.0.1",
